This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.7.1 (unreleased) [beta]

** Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
which will hopefully be fixed with this.  Reported by Dagobert
Michelsen <dam@opencsw.org>.

** SAML changes reverted, will be kept on a separate branch.

* Version 1.7.0 (released 2010-10-22) [alpha]

** Support for SAML20 mechanism as per -01 IETF draft.  See lib/NEWS.

** doc: Mention new SAML properties.

** tests: New tests/saml20.c file.

* Version 1.6.0 (released 2010-12-14) [beta]

** No changes since release candidate 1.5.5.

* Version 1.5.5 (released 2010-12-09) [beta]

** gsasl: Add --no-cb to disable use of TLS channel bindings.

** build: Use silent build rules via automake.
Use 'make V=99' to see the command lines used.

* Version 1.5.4 (released 2010-11-14) [beta]

** Update gnulib files.

* Version 1.5.3 (released 2010-11-14) [beta]

** gsasl: Support for TLS channel bindings.
Requires GnuTLS 2.11.4 or later for the gnutls_session_channel_binding
function.  Used by the SCRAM-SHA-1-PLUS mechanism.

** doc: Mention new property GSASL_CB_TLS_UNIQUE and SCRAM-SHA-1-PLUS.

** tests: Added self-tests for SCRAM-SHA-1-PLUS.

* Version 1.5.2 (released 2010-09-27) [beta]

** gsasl: Avoid fixed size buffers.
This caused problems on Windows where the BUFSIZ was too small for
some line lengths with GS2-KRB5.

** tests: Fix error strings to be more unique.

** doc: Added section on how to build with MIT Kerberos for Windows.

** doc: Added PDF version of API reference manual.
See doc/reference/gsasl.pdf.

** i18n: Updated translations.
Thanks to Benno Schulenberg.

** Update gnulib files.

* Version 1.5.1 (released 2010-04-21) [beta]

** Update gnulib files.

* Version 1.5.0 (released 2010-03-31) [beta]

** doc: Explain GS2-related changes.
